[metadata]
name = pyler
version = 0.1.1
description = Helper architecture for tackling Project Euler problems
long_description = file: README.rst
author = Joachim Jablon
author_email = ewjoachim@gmail.com
url = https://github.com/ewjoachim/pyler
packages = find:
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
include_package_data = true
zip_safe = true
install_requires =
    beautifulsoup4
    requests
