[metadata]
name = pyler
version = 0.2.1.dev0
description = Helper architecture for tackling Project Euler problems
long_description = file: README.rst
author = Joachim Jablon
author_email = ewjoachim@gmail.com
url = https://github.com/ewjoachim/pyler
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
license = MIT
keywords = project-euler, tdd

[options]
packages = find:
include_package_data = true
zip_safe = true
install_requires =
    beautifulsoup4==4.6.3
    requests==2.19.1

[options.extras_require]
dev =
    wheel==0.31.1
    sphinx==1.8.0
    tox==3.2.1
    zest.releaser[recommended]==6.15.2
    prospector[with_pyroma]==1.1.2

tests =
    pytest==3.8.0
    pytest-cov==2.6.0
    pytest-mock
