[metadata]
name = pyler
version = 0.2.1.dev0
description = Helper architecture for tackling Project Euler problems
long_description = file: README.rst
author = Joachim Jablon
author_email = ewjoachim@gmail.com
url = https://github.com/ewjoachim/pyler
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
license = MIT
keywords = project-euler, tdd

[options]
packages = find:
include_package_data = true
zip_safe = true
install_requires =
    beautifulsoup4
    requests

[options.extras_require]
dev =
    wheel==0.31.1
    sphinx
    tox
    zest.releaser[recommended]
    prospector[with_pyroma]

tests =
    pytest
    pytest-cov
    pytest-mock
